Fixes iframes stretching the page

--- a/src/site/assets/css/index.css
+++ b/src/site/assets/css/index.css
@@ -116,6 +116,14 @@ particle {
 }
 
 /*
+    Posts
+*/
+
+.tmpl-post iframe {
+    max-width: 100%;
+}
+
+/*
   Custom helpers
  */
 
